--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -7,7 +7,7 @@
 <div *ngIf='remoteApiList.length'>
   <h1>Found APis</h1>
   <h2 *ngFor='let r of remoteApiList'>
-    From: {{r["ip"]}} - Api Version: {{r["data"]["api_version"]}}
+    Api Version: {{r["api_version"]}}
   </h2>
 </div>
 
